--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,11 @@
 -------------------------------------------------------------------
+Wed Mar 19 15:04:52 UTC 2025 - tomschr@users.noreply.github.com
+
+* Update to 2.95.8
+  - #686: Conditionally use syntax highlighting
+  - #697: Adjust color contrast on procedure backgrounds
+  - #698: Improve color contrast when clicking Copy button
+-------------------------------------------------------------------
 Wed Mar 12 12:38:12 UTC 2025 - tomschr@users.noreply.github.com
 
 * Update to 2.95.7
