--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,15 @@
 -------------------------------------------------------------------
+Wed Apr 23 13:33:53 UTC 2025 - tomschr@users.noreply.github.com
+
+
+-------------------------------------------------------------------
+Wed Apr 23 15:32:00 UTC 2025 - tomschr@users.noreply.github.com
+
+* Update to 2.95.10
+  - Fix DOCTEAM-1772: Adjust <link rel="next|prev"> (#708)
+  - Fix problem with GitHub URL &amp; masquerading (#707)
+
+-------------------------------------------------------------------
 Wed Mar 26 13:04:25 UTC 2025 - tomschr@users.noreply.github.com
 
 * Update to 2.95.9
