--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,10 @@
 -------------------------------------------------------------------
+Tue Aug 12 06:33:21 UTC 2025 - tomschr@users.noreply.github.com
+
+* Update to 2.95.14
+  - JSON-LD: Select the nearest revision date (#718)
+  - Fix #721: Integrate SUSE header
+-------------------------------------------------------------------
 Wed Jun 25 05:53:25 UTC 2025 - tomschr@users.noreply.github.com
 
 * Update to 2.95.13
