--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,9 @@
 -------------------------------------------------------------------
+Thu Aug 14 13:02:37 UTC 2025 - tomschr@users.noreply.github.com
+
+* Update to 2.95.17
+  Recreated from 2.95.16
+-------------------------------------------------------------------
 Thu Aug 14 12:47:49 UTC 2025 - tomschr@users.noreply.github.com
 
 * Update to 2.95.16
