--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,11 @@
 -------------------------------------------------------------------
+Wed Sep 10 06:14:58 UTC 2025 - tomschr@users.noreply.github.com
+
+* Update to 2.95.18
+  - Update language switcher code & normalization (#731)
+  - Improve CSS for literal inside xref (#732)
+
+-------------------------------------------------------------------
 Thu Aug 14 13:02:37 UTC 2025 - tomschr@users.noreply.github.com
 
 * Update to 2.95.17
