--- a/suse2022-ns/common/l10n/zh_cn.xml
+++ b/suse2022-ns/common/l10n/zh_cn.xml
@@ -265,7 +265,7 @@
   </l:context>
 
   <l:context name="datetime">
-    <l:template name="titlepage.format" text="Y-m-d"/>
+    <l:template name="titlepage.format" text="Y 年 m 月 d 日"/>
     <l:template name="format" text="Y-m-d"/>
   </l:context>
 </l:l10n>
